--- a/wishlist_management/package.json
+++ b/wishlist_management/package.json
@@ -13,5 +13,8 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "typescript": "^5.3.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.5"
   }
 }
